  MediaWiki:Missing-article
* (bug 14117) "redirected from" is now also shown on foreign file redirects
* (bug 18436) JavaScript-added AJAX messages (from the JS watch/unwatch, for 
  instance) no longer include a redundant "display:block" hardcoded style.
* (bug 20802) Fixed thumb.php redirect handling
* (bug 17747) Only display thumbnail column in file history if the image can 
  be rendered.

== API changes in 1.16 ==

* Added uiprop=changeablegroups to meta=userinfo
* Added usprop=gender to list=users
* (bug 18311) action=purge now works for images too
* Add parentid to prop=revisions output
* (bug 17832) action=delete returns 'unknownerror' instead of 'permissiondenied'
  when the user is blocked
* (bug 18546) Added timestamp of new revision to action=edit output
* (bug 18554) Also list hidden revisions in list=usercontribs for privileged
  users
* (bug 13049) "API must be accessed from the primary script entry point" error
* (bug 16422) Don't display help for format=jsonfm unless specifically requested
* Added PHP and database version to meta=siteinfo output
* (bug 18533) Add readonly message to meta=siteinfo output
* (bug 18518) Add clprop=hidden to prop=categories
* (bug 18710) Fixed internal error with empty parameter in action=paraminfo
* (bug 18709) Missing descriptions for some parameters in action=paraminfo
  output
* (bug 18731) Show correct SVN links for extension modules in api.php?version
* (bug 18730) Add version information to action=paraminfo output
* (bug 18743) Add ucprop=size to list=usercontribs
* (bug 18749) Add generator flag to action=paraminfo output
* Make action=block respect $wgEnableUserEmail and $wgSysopEmailBans
* Made deleting file description pages without files possible
* (bug 18773) Add content flag to siprop=namespaces output
* (bug 18785) Add siprop=languages to meta=siteinfo
* (bug 14200) Added user and excludeuser parameters to list=watchlist and
  list=recentchanges